# fraud_detection-big_data

./: .dockerignore  .env.example  .gitignore  AGENTS.md  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
configs/app/: experiment.yaml  model.yaml  pipeline.yaml  thresholds.yaml
configs/hadoop/: core-site.xml  hdfs-site.xml
configs/hive/: hive-site.xml
configs/kafka/: topics.sh
configs/spark/: log4j2.properties  spark-defaults.conf
dags/: _common.py  dag_00_init_lakehouse.py  dag_01_ingest_to_kafka.py  dag_02_bronze_streaming.py  dag_03_silver_processing.py  dag_04_train_fraud_model.py  dag_05_score_streaming.py  dag_06_gold_aggregations.py  dag_07_data_quality_metrics.py
docker/airflow/: Dockerfile
docker/spark/: Dockerfile
docs/: airflow_orchestration.md  architecture.md  dataset.md  experiment_results.md  literature_alignment.md  methodology.md  mllib_constraints.md  powerbi.md  troubleshooting.md
docs/article/: README.md  fraud_lakehouse_article.tex  render_pdf.py
jobs/: __init__.py
jobs/gold/: build_gold_aggregations.py
jobs/ingestion/: produce_transactions.py
jobs/init/: create_iceberg_tables.py
jobs/processing/: bronze_to_silver.py
jobs/quality/: data_quality_report.py
notebooks/: 01_dataset_exploration.ipynb  02_model_metrics.ipynb  03_gold_dashboard_queries.ipynb
sql/: create_bronze_tables.sql  create_gold_tables.sql  create_namespaces.sql  create_silver_tables.sql  sample_queries.sql
tests/: test_class_weights.py  test_metrics.py  test_schema.py  test_threshold_tuning.py  test_transaction_id.py
(+17 files in other folders)
