[project]
name = "fraud-lakehouse-mllib"
version = "0.1.0"
description = "Local lakehouse architecture for real-time fraud detection with Spark MLlib, Kafka, Iceberg, HDFS, Hive Metastore and Airflow."
requires-python = ">=3.10"
dependencies = [
  "pyspark==3.5.1",
  "PyYAML==6.0.2",
  "kafka-python==2.0.2",
  "numpy==1.24.4",
]

[project.optional-dependencies]
dev = [
  "pytest==8.2.2",
]

[tool.pytest.ini_options]
pythonpath = ["src", "."]
testpaths = ["tests"]
